UPDATE:    Angular6引入jQuery-knob背景图修改    about.html 中修改为个人信息

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "Hey, this is Littlevil."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,25 +15,17 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>今天的风儿甚是喧嚣 <br> 今日 は……风 が 騒がしいな</p></blockquote>
 
-    <p>Hey，我是<strong>Littleevil</strong>，一只后台程序猿，现在深圳工作。</p>
+    <p>OHa，我是<strong>Littleevil</strong>，一只后台程序猿，现在深圳工作。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>工作、学习之余，喜欢看动漫，喜欢玩游戏，同时需要学习日本料理。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>感觉日本料理和潮汕料理很搭，都是清谈且鲜美。</p>
 
-    <p></p>
-    
-    <h5>Talks</h5>
+    <p>这是我的参考<a href="https://github.com/qiubaiying/qiubaiying.github.io">BY Blog</a>搭建的个人博客。我在GitHub主页<a href="https://github.com/a1164714">👉GitHub·Littleevil</a> 与 博客园主页<a href="https://www.cnblogs.com/linzhanfly/">👉BY</a>。</p>
 
-    <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
+    <p>感谢<a href="http://qiubaiying.top/about/">柏荧(BY)</a>的个人博客搭建教程。</p>
 </div>
 
 <!-- English Version -->
@@ -112,9 +104,7 @@ header-img: "img/post-bg-rwd.jpg"
     repo: '{{site.gitalk.repo}}',
     owner: '{{site.gitalk.owner}}',
     admin: ['{{site.gitalk.admin}}'],
-    distractionFreeMode: {{site.gitalk.distractionFreeMode}},
-    id: 'about',
-    });
+    distractionFreeMode: {{site.gitalk.distractionFreeMode}},id: 'about',});
     gitalk.render('gitalk-container');
 </script>
 {% endif %}
