UPDATE:    about.html中修改'需要'为'喜欢'

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>OHa，我是<strong>Littleevil</strong>，一只后台程序猿，现在深圳工作。</p>
 
-    <p>工作、学习之余，喜欢看动漫，喜欢玩游戏，同时需要学习日本料理。</p>
+    <p>工作、学习之余，喜欢看动漫，喜欢玩游戏，同时喜欢学习日本料理。</p>
 
     <p>感觉日本料理和潮汕料理很搭，都是清谈且鲜美。</p>
 
